syntax = "proto3";

option go_package = "./chatpb";

package chatpb;

service ChatService {
    rpc Connected(Channel)returns(MessageAck){}//unary
    rpc JoinChannel(Channel) returns (stream Message) {}//server streaming
    rpc SendMessage(stream Message) returns (MessageAck) {}//client streaming
    rpc SendMessagetoEveryone(stream Message)returns(stream Message){}//bidi
}

message Channel {
    string name = 1;
    string senders_name = 2;
}

message Message {
    string sender = 1;
    Channel channel = 2;
    string message = 3;
}

message MessageAck {
    string status = 1;
}
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative chatpb/chat.proto